# atlas

./: Cargo.toml  LICENSE-MIT  NOTICE  readme.md
aux/c_app/: app.c
aux/c_app_rust_lib/: app.c
src/: detect.rs  detect_tests.rs  error.rs  error_tests.rs  lib.rs  lib_tests.rs  main.rs  report.rs  report_tests.rs  sym.rs  sym_tests.rs
test_data/c_app/: app
test_data/c_app_c_lib_rust_lib/: app  app.c  c_lib.c  rust_lib.rs
test_data/c_app_rust_lib/: app
tests/: integration_test.rs
tools/atlas/: Cargo.toml
tools/atlas/src/: detect.rs  detect_tests.rs  error.rs  error_tests.rs  lib.rs  lib_tests.rs  main.rs  report.rs  report_tests.rs  sym.rs  sym_tests.rs
tools/atlas/tests/: integration_test.rs
