[package]
name = "atlas"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "atlas"
path = "src/main.rs"

[lib]
name = "atlas"
path = "src/lib.rs"

[dependencies]
rustc-demangle = "0.1.21"
cpp_demangle = "0.3.5"
cargo-lock = "7.0.1"
syn = { version = "1.0.82", features = ["extra-traits", "full"] }
lazy_static = "1.4.0"
regex = "1.5.4"
