[package]
name = "atlas"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "atlas"
path = "src/main.rs"

[lib]
name = "atlas"
path = "src/lib.rs"

[dependencies]
cargo-lock = "7.0.1"
lazy_static = "1.4.0"
prettytable-rs = "0.8.0"
regex = "1.5.4"
symbolic = { version = "8.5.0", features = ["demangle"] }
syn = { version = "1.0.82", features = ["extra-traits", "full"] }
