[package]
name = "atlas"
version = "0.1.0"
edition = "2018"
authors = ["Mario Noseda"]

[[bin]]
name = "atlas"
path = "src/main.rs"

[lib]
name = "atlas"
path = "src/lib.rs"

[dependencies]
bytesize = "1.1.0"
clap = { version = "3.0.6", features = ["derive"] }
lazy_static = "1.4.0"
prettytable-rs = "0.8.0"
regex = "1.5.4"
textwrap = { version = "0.14.2", features = ["terminal_size"] }
